{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 354,
  "lineage": "257fb129-974d-26cf-d69b-4a35a1cc18ae",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "104.196.211.228",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-06-11T18:42:41.903-07:00",
            "id": "projects/iti-gcp-hossam/regions/us-east1/addresses/nat",
            "name": "nat",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "iti-gcp-hossam",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/regions/us-east1/addresses/nat"
          },
          "dependencies": [
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-11T18:43:05.129-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iti-gcp-hossam/global/firewalls/http-rule",
            "log_config": [],
            "name": "http-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/global/networks/iti-vpc",
            "priority": 1000,
            "project": "iti-gcp-hossam",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/global/firewalls/http-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.iti-vpc",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-11T18:43:04.678-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iti-gcp-hossam/global/firewalls/ssh-rule",
            "log_config": [],
            "name": "ssh-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/global/networks/iti-vpc",
            "priority": 1000,
            "project": "iti-gcp-hossam",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/global/firewalls/ssh-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.iti-vpc",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20230605",
                    "labels": {
                      "name": "private-vm"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/zones/us-east1-b/disks/private-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/iti-gcp-hossam/zones/us-east1-b/instances/private-vm",
            "instance_id": "1359338254451328730",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "startup-script": "#!/bin/bash\nmkdir /home/hossam_mohammed_shawky/deployments\n"
            },
            "metadata_fingerprint": "hVPxx5odDII=",
            "name": "private-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/global/networks/iti-vpc",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/regions/us-east1/subnetworks/iti-subnet",
                "subnetwork_project": "iti-gcp-hossam"
              }
            ],
            "project": "iti-gcp-hossam",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/zones/us-east1-b/instances/private-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "data.google_compute_image.ubuntu1804",
            "google_compute_network.iti-vpc",
            "google_compute_subnetwork.iti-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "iti-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/iti-gcp-hossam/global/networks/iti-vpc",
            "mtu": 1460,
            "name": "iti-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "iti-gcp-hossam",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/global/networks/iti-vpc"
          },
          "dependencies": [
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "iti-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-11T18:43:04.670-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/iti-gcp-hossam/regions/us-east1/routers/iti-router",
            "name": "iti-router",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/global/networks/iti-vpc",
            "project": "iti-gcp-hossam",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/regions/us-east1/routers/iti-router"
          },
          "dependencies": [
            "google_compute_network.iti-vpc",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "iti-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "iti-gcp-hossam/us-east1/iti-router/iti-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "iti-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "iti-gcp-hossam",
            "region": "us-east1",
            "router": "iti-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.iti-vpc",
            "google_compute_router.iti-router",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gke-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-11T18:43:04.597-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/iti-gcp-hossam/regions/us-east1/subnetworks/gke-subnet",
            "ip_cidr_range": "10.0.0.0/18",
            "name": "gke-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/global/networks/iti-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iti-gcp-hossam",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.52.0.0/20",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/regions/us-east1/subnetworks/gke-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.iti-vpc",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "iti-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-11T18:43:05.535-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/iti-gcp-hossam/regions/us-east1/subnetworks/iti-subnet",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "iti-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/global/networks/iti-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iti-gcp-hossam",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-gcp-hossam/regions/us-east1/subnetworks/iti-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.iti-vpc",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    }
  ]
}